--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>brianna perry</title>
 <style>video{max-width:100%;display:block;margin:auto;}</style></head><body style="background:black;">
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="012924.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="061024.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="8f55f012a1594f418069f016e23e6ec5.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706543667.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706557041.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706656608.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706677755.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706709111.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706768454.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706900819.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706970747.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1707087478.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1707142826.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1707223177.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1707273039.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1707402780.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1707451749.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1707571449.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1712616035.mp4"video/mp4"></video>
-<video playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1715044302.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="012924.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="061024.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="8f55f012a1594f418069f016e23e6ec5.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706543667.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706557041.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706656608.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706677755.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706709111.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706768454.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706900819.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1706970747.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1707087478.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1707142826.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1707223177.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1707273039.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1707402780.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1707451749.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1707571449.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1712616035.mp4"video/mp4"></video>
+<video controls="true" playsinline onclick="this.paused ? this.play() : this.pause(); arguments[0].preventDefault();"><source src="RPReplay_Final1715044302.mp4"video/mp4"></video>
 </body></html>
