--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>brianna perry</title>
+<html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>brianna perry</title><link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>video{max-width:100%;display:block;margin:auto;}</style></head><body style="background:black;">
 <video preload="metadata" controls="true" playsinline><source src="012924.mp4#t=0.1"video/mp4#t=0.1"></video>
 <video preload="metadata" controls="true" playsinline><source src="061024.mp4#t=0.1"video/mp4#t=0.1"></video>
